<resources>
    <string name="app_name">Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="category_home">Home</string>
    <string name="category_bollywood">Bollywood</string>
    <string name="category_places_to_visit">Places to Visit</string>
    <string name="category_history">History</string>
    <string name="category_geography">Geography</string>
    <string name="category_transport">Transport</string>
    <string name="category_culture">Culture</string>
    <string name="category_sports">Sports</string>
    <string name="category_eatery">Eatery</string>
    <string name="category_hidden_gem">Hidden Gem</string>
    <string name="category_civic">Civic Administration</string>
    <string name="history_info">Mumbai is built on what was once an archipelago of seven islands: Isle of Bombay, Parel, Mazagaon, Mahim, Colaba, Worli, and Old Womans Island (also known as Little Colaba). It is not exactly known when these islands were first inhabited. Pleistocene sediments found along the coastal areas around Kandivali in northern Mumbai suggest that the islands were inhabited since the South Asian Stone Age. Perhaps at the beginning of the Common Era, or possibly earlier, they came to be occupied by the Koli fishing community.
In the third century BCE, the islands formed part of the Maurya Empire, during its expansion in the south, ruled by the Buddhist emperor Ashoka of Magadha. The Kanheri Caves in Borivali were excavated in the mid-third century BCE, and served as an important centre of Buddhism in Western India during ancient Times. The city then was known as Heptanesia (Ancient Greek: A Cluster of Seven Islands) to the Greek geographer Ptolemy in 150 CE. The Mahakali Caves in Andheri were built between the 1st century BCE and the 6th century .
Between the second century BCE and ninth century CE, the islands came under the control of successive indigenous dynasties: Satavahanas, Western Satraps, Abhira, Vakataka, Kalachuris, Konkan Mauryas, Chalukyas and Rashtrakutas, before being ruled by the Shilaharas from 810 to 1260. Some of the oldest edifices in the city built during this period are the Jogeshwari Caves (between 520 and 525), Elephanta Caves (between the sixth to seventh century), Walkeshwar Temple (10th century), and Banganga Tank (12th century).
King Bhimdev founded his kingdom in the region in the late 13th century and established his capital in Mahikawati (present day Mahim). The Pathare Prabhus, among the earliest known settlers of the city, were brought to Mahikawati from Saurashtra in Gujarat around 1298 by Bhimdev. The Delhi Sultanate annexed the islands in 1347–48 and controlled it until 1407. During this time, the islands were administered by the Muslim Governors of Gujarat, who were appointed by the Delhi Sultanate.
The islands were later governed by the independent Gujarat Sultanate, which was established in 1407. The Sultanate's patronage led to the construction of many mosques, prominent being the Haji Ali Dargah in Worli, built in honour of the Muslim saint Haji Ali in 1431. From 1429 to 1431, the islands were a source of contention between the Gujarat Sultanate and the Bahmani Sultanate of Deccan. In 1493, Bahadur Khan Gilani of the Bahmani Sultanate attempted to conquer the islands but was defeated.
</string>
    <string name="holi_des">Holi - the festival of colour and love. Among with many other mythological connotation, the celebration of Holi signifies the beginning of the legendary love story of Radha-Krishna. Holi is all about letting go of your inhibitions and feeling the love. Playing with vibrant colours, where each colour alludes to an unique emotion, manifests the spirit of the festival. This is the day where people from all walks of life come together to have fun. Food and good music adds the to the energy and vigor!</string>
    <string name="dahi_des">Dahi Handi is one of the festive events and a team sport during the Hindu festival Gokulashtami, which is known as Krishna Janmashtami in the rest of the country, and celebrates the birth of Krishna. Dahi Handi is celebrated every August/September, the day after Krishna Janmashtami. It involves communities hanging an earthen pot filled with dahi (yogurt) or other milk-based delicacy, at a convenient or difficult to reach height. Young men and boys form teams, make a human pyramid and attempt to reach or break the pot. As they do so, girls surround them, sing with music, and cheer them on. It is a public spectacle, and well organized historic tradition of Hindus, with media attendance, prize money and commercial sponsorships. A participant in this festival is called a govinda or govinda pathak. It is mostly popular in the state of Maharashtra and nearby regions of India.
    </string>
    <string name="ganpati_des">Ganesh Chaturthi (IAST: Gaṇēśa Chaturthī), also known as Vinayaka Chaturthi (Vināyaka Chaturthī) or Vinayaka Chavithi (Vināyaka Chavithī) is the Hindu festival that reveres the god Ganesha. A ten-day festival, it starts on the fourth day of Hindu luni-solar calendar month Bhadrapada, which typically falls in the months of August or September of the Gregorian calendar. The festival is marked with the installation of Ganesha clay idols privately in homes, or publicly on elaborate pandals (temporary stages). Observations include chanting of Vedic hymns and Hindu texts such as Ganapati Upanishad, prayers and vrata (fasting). Offerings and prasadam from the daily prayers, that is distributed from the pandal to the community, include sweets such as modaka believed to be a favorite of the elephant-headed deity. The festival ends on the tenth day after start, wherein the idol is carried in a public procession with music and group chanting, then immersed in a nearby body of water such as a river or ocean. In Mumbai alone, around 150,000 statues are immersed annually. thereafter the clay idol dissolves and Ganesha is believed to return to Mount Kailash to Parvati and Shiva.</string>
    <string name="vada_pav">Vada Pav, alternatively spelt Vada Pao, Wada Pav, or Wada Pao, is a vegetarian fast food dish native to the Indian state of Maharashtra. The dish consists of a deep fried potato dumpling placed inside a bread bun (pav) sliced almost in half through the middle. It is generally accompanied with one or more chutneys and a green chilli pepper. It originated as cheap street food in Mumbai, but is now served in food stalls and restaurants across India. It is also called Bombay Burger in keeping with its origins and its resemblance in physical form to a burger.
    </string>
    <string name="cutting_chai">Cutting chai literally translates to cut into half which means a small quantity of tea. Initially, cutting chai was only offered at ‘tapri’ or chai stalls, but now many modern cafes are also serving it along with accompaniments. Cutting chai is usually enjoyed with biscuits or Khari biscuits, bun maska, bhajiya pav or vada pav and you would find tea vendors at every nukkad in the city. The cutting chai is generally served in special small sized glasses. According to Mr. Sudhir Malhotra, Owner of Café Chai Bar, “People usually have a least 2–3 cups of tea in a day. Therefore, the concept of cutting chai came up; it was drinking a half cup so that you could drink many cups in a day and yet moderate the amount that you are drinking. We serve the chai with various snack options like crisp matthi, buttery naankhatai,  the famousvada pavor the good old samosa.”</string>
    <string name="bheja_fry">Bheja fry is also known as Maghaz or Magaj, which also means brain. The offal dish is a significant part of Indian Muslim, Bangladeshi and Pakistani cuisine(where it is called Maghaz Bhuna). The brain of a goat or sheep is fried, and cooked in a gravy. To make the gravy richer, almonds and pistachios are often added in the preparation. The "fried brains" are slightly spongy in texture, which is well complemented by the hot spices.</string>
    <string name="bhel_puri">Bhelpuri is a savoury snack, originating from the Indian subcontinent, and is also a type of chaat. It is made of puffed rice, vegetables and a tangy tamarind sauce.
Bhel is often identified with the beaches of Mumbai, such as Chowpatty or Juhu. One theory for its origin is that it was invented at a restaurant called Vithal near Victoria Terminus. According to another theory, Bhelpuri was contributed by the citys Gujaratis, who made it by adding complex flavours to the simple North Indian chaat. Gujarati housewives began making it, and invented several varieties like the Pakodi puri, and as it spread many different communities like the Mangaloreans and Sindhis made their own versions.</string>
    <string name="causeway">Colaba Causeway is a very happening commercial street and a major causeway or land link between Colaba and the Old Womans Island in the city of Mumbai,India Leamigo provides local experiences, activities and professional guides in this city
</string>
    <string name="phool_galli">Dadar Phool (flower) Market is located in Dadar west, right outside the railway station. There are wholesalers as well as retailers selling the freshest and wide varieties of flowers. The wholesale market starts early in the morning and the local retailers come to get the fresh stocks of the day. The mornings are usually chaotic here. There is one more market where the wholesalers deals with large amount of orders but this one is more accessible and close by to railway station.
    </string>
    <string name="dhobi_ghat">Dhobi Ghat is Mumbai‘s 140-year-old, open-air laundromat, and it is estimated that each day half a million pieces of clothing are sent there from hotels, hospitals, and homes. Through these photographs, you’ll learn a lot more about this Mumbai marvel.
</string>
    <string name="crawford_market">South Mumbai’s most famous wholesale market, Crawford Market came into being as a food and vegetable mart way back in 1869. Today it’s a repository of everything from spices, condiments, imported food items to souvenirs. Many big restaurants in Mumbai source their ingredients from here, primarily for the wholesale rates and international quality of products. Drop by to check out the varieties of French cheese in stock or pick up some Belgian cooking chocolate. We recommend stopping by at ‘Uncle’s Shop’ (shop number 349) which has a vast collection of sauces and seasonings and everything from wasabi peas to Thai curry cubes. Gastronomes will love this place.
</string>
    <string name="gateway_of_india">The Gateway of India is one of India\'s most unique landmarks situated in the city of Mumbai. The colossal structure was constructed in 1924. Located at the tip of Apollo Bunder, the gateway overlooks the Mumbai harbor, bordered by the Arabian Sea in the Colaba district. The Gateway of India is a monument that marks India chief ports and is a major tourist attraction for visitors who arrive in India for the first time. At one point of time, this monument represented the grandeur of the British Raj in India. The total construction cost of this monument was approximately 21 lakhs and the whole expense was borne by the Indian government. A favourite spot for tourists, nowadays, this monument attracts vendors, food stalls and photographers. The passing of the "First Battalion of the Somerset Light Infantry" was recorded as the first main event that took place at the Gateway of India. This ceremony was conducted on February 28, 1948, when the last set of British troops and divisions left India, post-independence.</string>
</resources>