<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <ImageView
        style="@style/cover"
        android:scaleType="centerCrop"
        android:src="@drawable/cover" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/history_button"
                        style="@style/Category"
                        android:text="@string/category_history" />

                    <Button
                        android:id="@+id/culture_button"
                        style="@style/Category"
                        android:text="@string/category_culture" />

                    <Button
                        android:id="@+id/eatery_button"
                        style="@style/Category"
                        android:text="@string/category_eatery" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/transport_button"
                        style="@style/Category"
                        android:text="@string/category_transport" />

                    <Button
                        android:id="@+id/places_to_visit_button"
                        style="@style/Category"
                        android:text="@string/category_places_to_visit" />

                    <Button
                        android:id="@+id/hidden_gem_button"
                        style="@style/Category"
                        android:text="@string/category_hidden_gem" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>